<resources>

    <string name="app_name">ফুলঝুড়ি ডিরেক্টরি</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="warning">সতর্ক বার্তা</string>
    <string name="action_settings">Settings</string>
    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <string name="level_text">Level %1$d</string>
    <!-- -
    This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
    For more information, see https://support.google.com/admob/answer/3052638
<!- -->
    <string name="interstitial_ad_unit_id">YOUR_INTERSTITIAL_AD_UNIT_ID</string>
    <string name="menu_refresh">menu_refresh</string>
    <string name="category">ক্যাটাগরি</string>
    <string name="name">নাম</string>
    <string name="designation">পদবি</string>
    <string name="mobile">মোবাইল</string>
    <string name="callimg">callImg</string>
    <string name="profileimage">profileImage</string>
    <string name="email">ইমেইল</string>
    <string name="emailimg">emailImg</string>
    <string name="ambulance_numbers">এ্যাম্বুলেন্স সমূহের নম্বর</string>
    <string name="baniati_shops">বানিয়াতি দোকানের তালিকা</string>
    <string name="hello">Hello</string>
    <string name="fuljhuri_cable_network">ফুলঝুড়ি ক্যাবল নেটওয়ার্ক</string>
    <string name="cosmeticks_shops">কসমেটিকস দোকানের তালিকা</string>
    <string name="emerjency_services">জরুরী সেবা সমূহ</string>
    <string name="police_station">থানা</string>
    <string name="fire_service">ফায়ার সার্ভিস</string>
    <string name="hospitals">হাসপাতাল</string>
    <string name="ambulace">এ্যাম্বুলেন্স</string>
    <string name="others">অন্যান্য</string>
    <string name="barguna_fire_service">বরগুনা ফায়ার সার্ভিসের নম্বর সমূহ</string>
    <string name="choose_your_category">আপনার পছন্দের ক্যাটাগরি নির্বাচন করুন</string>
    <string name="hospitals_numbers">প্রয়োজনীয় হাসপাতাল সমূহের তথ্য</string>
    <string name="jwelars_numbers">জুয়েলার্স সমূহের তালিকা</string>
    <string name="kamar_numbers">কামার এবং কুমারের দোকানের তালিকা</string>
    <string name="coblar_shops">মুচি দোকানের তালিকা</string>
    <string name="others_emerjency_numbers">অন্যান্য জরুরী নম্বর সমূহ</string>
    <string name="pharmacy_shops">ফার্মেসি সমূহের তালিকা</string>
    <string name="barguna_police_station_numbers">বরগুনা থানার প্রয়োজনীয় নম্বর সমূহ</string>
    <string name="settings_fragment">Settings Fragment</string>
    <string name="about_us_fragment">About Us Fragment</string>
    <string name="share_fragment">Share Fragment</string>
    <string name="fuljhuri_up">fuljhuri_up</string>
    <string name="all_up_members">১ নং বদরখালী ইউনিয়নের সদস্য বৃন্দ</string>
    <string name="vehicel">যানবাহন</string>
    <string name="motorcycle">মোটরসাইকেল</string>
    <string name="easy_byke">ইজি বাইক</string>
    <string name="pik_up">পিক-আপ/ট্রাক</string>
    <string name="van">ভ্যান</string>
    <string name="garage_workshop">গ্যারেজ এবং ওয়ার্কসপের তালিকা</string>
    <string name="star_name">* নাম</string>
    <string name="star_adress">* ঠিকানা</string>
    <string name="dr_hm_jahirul">ডা: এ.এইচ,এম জহিরুল ইসলাম সিভিল সার্জন, বরগুনা।</string>
    <string name="star_organaisation_head">* প্রতিষ্ঠান প্রধানের যোগাযোগ :-</string>
    <string name="demo_mobile_number">01717000000</string>
    <string name="app_logo">App Logo</string>
    <string name="_8801717237128">+8801717237128</string>
    <string name="no_internet">No Internet</string>
    <string name="please_check_internet_connection_and_try_again">Please Check Internet Connection and Try Again..</string>
    <string name="shop_name">প্রতিষ্ঠানের নাম</string>
    <string name="owner_name">মালিকের নাম</string>
    <string name="shop_adress">প্রতিষ্ঠানের অবস্থান</string>
    <string name="word_no">ওয়ার্ড নং</string>


</resources>