<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="175dp"
        app:cardCornerRadius="16dp"
        app:cardUseCompatPadding="true"
        >


        <LinearLayout
            android:id="@+id/relLayout"
            android:layout_marginTop="4dp"
            android:layout_marginStart="4dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="@color/sangri"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/actionBarItemBackground"
            >


            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:cardCornerRadius="250dp"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/profileImage"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/dummy_image"
                    android:contentDescription="@string/profileimage"
                    android:scaleType="centerCrop"/>

            </androidx.cardview.widget.CardView>




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginStart="12dp"
                >


                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alinur_bongobondhu"
                    android:text="@string/name"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    />


                <TextView
                    android:id="@+id/designation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alinur_bongobondhu"
                    android:text="@string/designation"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:orientation="horizontal"
                    >

                    <TextView
                        android:id="@+id/mobile"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:fontFamily="@font/alinur_bongobondhu"
                        android:text="@string/mobile"
                        android:textColor="#FFFFFF"
                        android:textSize="20sp"
                        />

                    <ImageView
                        android:id="@+id/imgCall"
                        android:layout_marginStart="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:contentDescription="@string/callimg"
                        android:src="@drawable/call"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?attr/actionBarItemBackground"
                        />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    >

                    <TextView
                        android:id="@+id/email"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:fontFamily="@font/alinur_bongobondhu"
                        android:text="@string/email"
                        android:textColor="#FFFFFF"
                        android:textSize="18sp"
                        />

                    <ImageView
                        android:id="@+id/imgEmail"
                        android:layout_marginStart="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:contentDescription="@string/emailimg"
                        android:src="@drawable/email"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?attr/actionBarItemBackground"
                        />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>